WAF/waf-cfn.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation template creates an Auto Scaling Group
  and Application Load Balancer infrastructure for AWS WAF.

Parameters:

  latestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.18-x86_64'

  myVPC:
    Description: Choose your VPC
    Type: AWS::EC2::VPC::Id

  myKeyPair:
    Description: Choose your key pair
    Type: AWS::EC2::KeyPair::KeyName

  myInstanceType:
    Description: Select your Instance Type
    Type: String
    Default: m7i-flex.large
    AllowedValues:
      - t3.micro
      - t3.small
      - c7i-flex.large
      - m7i-flex.large

  mySubnets:
    Description: Choose at least 2 subnets
    Type: List<AWS::EC2::Subnet::Id>

Resources:

  myASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: ramzn-asg-cfn
      DesiredCapacity: 1
      HealthCheckGracePeriod: 300
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !GetAtt myLT.LaunchTemplateId
        Version: !GetAtt myLT.DefaultVersionNumber
      MaxSize: 3
      MinSize: 1
      TargetGroupARNs:
        - !GetAtt myTargetGrp.TargetGroupArn
      VPCZoneIdentifier: !Ref mySubnets

  myListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !GetAtt myTargetGrp.TargetGroupArn
      LoadBalancerArn: !GetAtt myALB.LoadBalancerArn
      Port: 80
      Protocol: HTTP

  myALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: ramzn-asg-cfn
      SecurityGroups:
        - !Ref mySecGrp
      Subnets: !Ref mySubnets
      Type: application

  myLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !Ref latestAmiId
        InstanceType: !Ref myInstanceType
        KeyName: !Ref myKeyPair
        SecurityGroupIds:
          - !Ref mySecGrp

        UserData: !Base64 |
          #!/bin/bash -x
          yum update -y
          yum install -y httpd
          chmod -R 777 /var/www/html

          echo "<html>
          <head>
              <title>Web Server Running in AWS</title>
          </head>
          <body>
              <h1>This web server is protected by AWS WAF</h1>
          </body>
          </html>" > /var/www/html/index.html

          systemctl start httpd
          systemctl enable httpd

      LaunchTemplateName: ramzn-asg-cfn

  myTargetGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      Name: ramzn-asg-cfn
      Port: 80
      Protocol: HTTP
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref myVPC

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows SSH and HTTP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: ramzn-cfn-asg

      VpcId: !Ref myVPC

Outputs:

  ShowDNS:
    Description: DNS of ALB
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt myALB.DNSName
